--- a/drawer/tsconfig.json
+++ b/drawer/tsconfig.json
@@ -3,7 +3,9 @@
     "module": "es6",
     "target": "es6",
     "sourceMap": true,
-    "outDir": "./dist"
+    "allowJs": true,
+    "outDir": "./dist",
+    "moduleResolution": "node"
   },
   "exclude": ["node_modules"],
   "include": ["**/*.ts"]
