--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,6 +13,6 @@ serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
+sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
 argon2 = "0.5.3"
 rand_core = { version = "0.6.4", features = ["getrandom"] }
