--- a/drawer/tsconfig.json
+++ b/drawer/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "es6",
-    "target": "es6",
+    "module": "esnext",
+    "target": "esnext",
     "sourceMap": true,
     "allowJs": true,
     "outDir": "./dist",
