--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -21,4 +21,4 @@ sqlx = { version = "0.8", features = [
 ] }
 argon2 = "0.5.3"
 rand_core = { version = "0.6.4", features = ["getrandom"] }
-tower-http = { version = "0.6.6", features = ["fs"] }
+tower-http = { version = "0.6.6", features = ["cors", "fs"] }
