--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -23,3 +23,5 @@ argon2 = "0.5.3"
 rand_core = { version = "0.6.4", features = ["getrandom"] }
 tower-http = { version = "0.6.6", features = ["cors", "fs"] }
 dotenv = "0.15.0"
+wtransport = "0.6.1"
+anyhow = "1.0.98"
