--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -25,3 +25,4 @@ tower-http = { version = "0.6.6", features = ["cors", "fs"] }
 dotenv = "0.15.0"
 wtransport = "0.6.1"
 anyhow = "1.0.98"
+futures = "0.3.31"
