--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -23,7 +23,9 @@ argon2 = "0.5.3"
 rand_core = { version = "0.6.4", features = ["getrandom"] }
 tower-http = { version = "0.6.6", features = ["cors", "fs"] }
 dotenv = "0.15.0"
-wtransport = "0.6.1"
 anyhow = "1.0.98"
 futures = "0.3.31"
 tokio-stream = "0.1.17"
+tokio-tungstenite = "0.27.0"
+futures-util = "0.3.31"
+log = "0.4.27"
