--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "node live-server.cjs & CERT_FILE=../cert.pem node build.js && fg",
+    "dev": "node live-server.cjs & BACKEND_URL='http://localhost:8000' BACKEND_WS_URL='http://localhost:8001' node build.js && fg",
     "build": "NODE_ENV=production node build.js",
     "typecheck": "tsc --noEmit"
   },
